--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -5,38 +5,40 @@
 	<div class="yellow_content_box">
         <h1>Sign in</h1>
 
-		<form method="post" action="/login">
-		<!-- Cross Site Request Forgery protection -->
-            {{ form.csrf_token }}
+     <form method="post" action="/login">
+         <!-- Cross Site Request Forgery protection -->
+         {{ form.csrf_token }}
 
-            <fieldset class="email">
-                {{ form.email.label }}
-                {{ form.email(placeholder='youremail@example.com') }}
-                {% if form.email.errors %}
-                  <ul class="errors">
-                    {% for error in form.email.errors %}
-                      <li>{{ error }}</li>{% endfor %}
-                  </ul>
-                {% endif %}
-            </fieldset>
+         <fieldset class="email">
+             {{ form.email.label }}
+             {{ form.email(placeholder='youremail@example.com') }}
+             {% if form.email.errors %}
+                 <ul class="errors">
+                     {% for error in form.email.errors %}
+                         <li>{{ error }}</li>{% endfor %}
+                 </ul>
+             {% endif %}
+         </fieldset>
 
-            <fieldset class="password">
-                {{ form.password.label }}
-                {{ form.password }}
-                {% if form.password.errors %}
-                  <ul class="errors">
-                    {% for error in form.password.errors %}
-                      <li>{{ error }}</li>{% endfor %}
-                  </ul>
-                {% endif %}
-            </fieldset>
+         <fieldset class="password">
+             {{ form.password.label }}
+             {{ form.password }}
+             {% if form.password.errors %}
+                 <ul class="errors">
+                     {% for error in form.password.errors %}
+                         <li>{{ error }}</li>{% endfor %}
+                 </ul>
+             {% endif %}
+         </fieldset>
 
-                {{ form.submit }}
-
-		</form>
-		<p>
-		If you don't already have an account, <a href="/user_registration"><strong> Register </strong></a> for one.
-		</p>
-	</div>
-</div>
+         <div class="search_button_container" align="center">
+             <button type="submit" class="search_button" href="add-website-here" target="_blank" rel="nofollow noopener">
+                 {{ form.submit }} </button>
+         </div>
+     </form>
+     <p>
+         If you don't already have an account, <a href="/user_registration"><strong> Register </strong></a> for one.
+     </p>
+ </div>
+ </div>
 {% endblock %}
