--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -1,22 +1,22 @@
 {% extends "header_footer.html" %}
 
 {% block content %}
- <div class="registration">
-	<div class="yellow_content_box">
+<div class="registration">
+    <div class="yellow_content_box">
         <h1>Sign in</h1>
 
-		<form method="post" action="/login">
-		<!-- Cross Site Request Forgery protection -->
+        <form method="post" action="/login">
+            <!-- Cross Site Request Forgery protection -->
             {{ form.csrf_token }}
 
             <fieldset class="email">
                 {{ form.email.label }}
                 {{ form.email(placeholder='youremail@example.com') }}
                 {% if form.email.errors %}
-                  <ul class="errors">
-                    {% for error in form.email.errors %}
-                      <li>{{ error }}</li>{% endfor %}
-                  </ul>
+                    <ul class="errors">
+                        {% for error in form.email.errors %}
+                            <li>{{ error }}</li>{% endfor %}
+                    </ul>
                 {% endif %}
             </fieldset>
 
@@ -24,19 +24,21 @@
                 {{ form.password.label }}
                 {{ form.password }}
                 {% if form.password.errors %}
-                  <ul class="errors">
-                    {% for error in form.password.errors %}
-                      <li>{{ error }}</li>{% endfor %}
-                  </ul>
+                    <ul class="errors">
+                        {% for error in form.password.errors %}
+                            <li>{{ error }}</li>{% endfor %}
+                    </ul>
                 {% endif %}
             </fieldset>
 
-                {{ form.submit }}
-
-		</form>
-		<p>
-		If you don't already have an account, <a href="/user_registration"><strong> Register </strong></a> for one.
-		</p>
-	</div>
+            <div class="search_button_container" align="center">
+                {{ form.submit(class_="search_button") }}
+            </div>
+        </form>
+        <p>
+            If you don't already have an account, <a href="/user_registration"><strong> Register </strong></a> for
+            one.
+        </p>
+    </div>
 </div>
 {% endblock %}
