--- a/flaskr/templates/search_page/search_main_content_list.html
+++ b/flaskr/templates/search_page/search_main_content_list.html
@@ -24,9 +24,7 @@
 
                 <div class="thumbnail card">
                     <div class="img-event">
-                        {% if car.photo %}
-                            <img class="group border-image-source img-fluid" src="{{ car.photo.url }}"/>
-                        {% endif %}
+                        <img class="group border-image-source img-fluid" src="{{ car.get_photo_path() }}"/>
                     </div>
                     <div class="caption card-body">
                         <h4 class="group card-title inner list-group-item-heading">
@@ -35,8 +33,8 @@
                         <div class="row">
                             <div class="col-sm-4 col-md-6">
                                 <p class="lead">
-                                <div>Type: {{ car.type }}</div>
-                                <div>Seats: {{ car.num_of_passengers }}</div>
+                                <div>Type: {{ car.car_type.name }}</div>
+                                <div>Seats: {{ car.num_of_passangers }}</div>
                                 {% if  car.air_conditioning == True %}
                                     <div> Air Conditioning: +</div>
                                 {% endif %}
