front-end fixes

--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -12,10 +12,10 @@
                 {{ form.location }}
             </div>
             <div>
-                Pick up Date (date and time):
+               <p> Pick up Date (date and time):
                 {{ form.pick_up_date }}
 
-                Drop-Off Date (date and time):
+                <p> Drop-Off Date (date and time):
                 {{ form.drop_off_date }}
 
             </div>
