--- a/flaskr/templates/search_page/search_filter_by.html
+++ b/flaskr/templates/search_page/search_filter_by.html
@@ -55,9 +55,8 @@
     </article>
 
     <article class="card-group-item">
-
         <header class="card-header">
-            <h6 class="title">Choose type </h6>
+            <h6 class="title">Transmission </h6>
         </header>
 
         <div class="filter-content">
@@ -65,22 +64,126 @@
                 <label class="form-check">
                     <input class="form-check-input" type="radio" name="exampleRadio" value="">
                     <span class="form-check-label">
-			    First hand items
+			    Automatic Transmission
 			  </span>
                 </label>
                 <label class="form-check">
                     <input class="form-check-input" type="radio" name="exampleRadio" value="">
                     <span class="form-check-label">
-			    Brand new items
-			  </span>
-                </label>
-                <label class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadio" value="">
-                    <span class="form-check-label">
-			    Some other option
+			    Manual gearbox
 			  </span>
                 </label>
             </div>
         </div>
     </article>
+
+       <article class="card-group-item">
+
+        <header class="card-header">
+            <h6 class="title">Passenger </h6>
+        </header>
+
+        <div class="filter-content">
+            <div class="card-body">
+                <form>
+                    <label class="form-check">
+                        <input class="form-check-input" type="checkbox" value="">
+                        <span class="form-check-label">
+                        1 to 2 passengers
+                      </span>
+                    </label>
+
+                    <label class="form-check">
+                        <input class="form-check-input" type="checkbox" value="">
+                        <span class="form-check-label">
+                        2 to 4 passangers
+                      </span>
+                    </label>
+
+                    <label class="form-check">
+                        <input class="form-check-input" type="checkbox" value="">
+                        <span class="form-check-label">
+                        5 to 8 passangers
+                      </span>
+                    </label>
+
+                    <label class="form-check">
+                        <input class="form-check-input" type="checkbox" value="">
+                        <span class="form-check-label">
+                        8 to 12 passangers
+                      </span>
+                    </label>
+                </form>
+            </div>
+        </div>
+    </article>
+
+   <article class="card-group-item">
+
+    <header class="card-header">
+        <h6 class="title">Price </h6>
+    </header>
+
+    <div class="filter-content">
+        <div class="card-body">
+            <form>
+                <label class="form-check">
+                    <input class="form-check-input" type="checkbox" value="">
+                    <span class="form-check-label">
+                    less 50$
+                  </span>
+                </label>
+
+                <label class="form-check">
+                    <input class="form-check-input" type="checkbox" value="">
+                    <span class="form-check-label">
+                    50 - 100$
+                  </span>
+                </label>
+
+                <label class="form-check">
+                    <input class="form-check-input" type="checkbox" value="">
+                    <span class="form-check-label">
+                    100 - 200$
+                  </span>
+                </label>
+
+                <label class="form-check">
+                    <input class="form-check-input" type="checkbox" value="">
+                    <span class="form-check-label">
+                    Greater than 200$
+                  </span>
+                </label>
+            </form>
+        </div>
+    </div>
+    </article>
+
+<article class="card-group-item">
+
+    <header class="card-header">
+        <h6 class="title">Car Specifications </h6>
+    </header>
+
+    <div class="filter-content">
+        <div class="card-body">
+            <form>
+                <label class="form-check">
+                    <input class="form-check-input" type="checkbox" value="">
+                    <span class="form-check-label">
+                    With Air-conditioning
+                  </span>
+                </label>
+
+                <label class="form-check">
+                    <input class="form-check-input" type="checkbox" value="">
+                    <span class="form-check-label">
+                    4+ Doors
+                  </span>
+                </label>
+            </form>
+        </div>
+    </div>
+    </article>
+
 </div>
