--- a/flaskr/static/css/main.css
+++ b/flaskr/static/css/main.css
@@ -222,3 +222,9 @@ transition: all 0.4s ease 0s;
 .indent_bottom {
     margin-bottom: 20px;
 }
+
+.yellow_content_box_detail { 
+  background-color:#FFD54F;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
